--- a/index.html
+++ b/index.html
@@ -465,7 +465,9 @@
     </section>
 
     <footer>
-
+<center>
+  VISITORS:  <div id="sfc7apkyte1y82jaz7xlg7935lzb9nerqu6"></div><script type="text/javascript" src="https://counter3.stat.ovh/private/counter.js?c=7apkyte1y82jaz7xlg7935lzb9nerqu6&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="free website counters no ads"><img src="https://counter3.stat.ovh/private/freecounterstat.php?c=7apkyte1y82jaz7xlg7935lzb9nerqu6" border="0" title="free website counters no ads" alt="free website counters no ads"></a></noscript>
+</center>
     </footer>
 
     </div>
