--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section>
             <div class="container main-section-1">
                 <div class="header-image">
-
+                 
                 </div>
 
 
@@ -459,8 +459,9 @@
                     </center>
                 </div>
             </div>
-
-
+            <center>
+            <button onclick="document.location.href='https://nocovid.netlify.app/'" class="btn btn-primary">पूरे भारत का विस्तृत  डेटा देखें </button>
+        </center>
     </div>
     </section>
 
