--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="row">
 
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(240, 227, 111);" class="box">
 
                             <center>
                                 <div class="text">
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(243, 151, 151);" class="box">
                             <center>
                                 <div class="text">
                                     {{today_positive_reports_text}}
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(103, 128, 240);" class="box">
                             <center>
                                 <div class="text">
                                     {{today_negative_reports_txt}}
@@ -103,7 +103,7 @@
                 <div class="row">
 
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(102, 243, 97);" class="box">
 
                             <center>
                                 <div class="text">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(248, 175, 66);" class="box">
                             <center>
                                 <div class="text">
                                     {{today_samples_taken_report_txt}}
@@ -148,7 +148,7 @@
                 <div class="row">
 
                     <div class="col-sm-3">
-                        <div class="box">
+                        <div style="background: rgb(245, 115, 115);" class="box">
 
                             <center>
                                 <div class="text">
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                     <div class="col-sm-3">
-                        <div class="box">
+                        <div style="background: rgb(238, 158, 66);" class="box">
                             <center>
                                 <div class="text">
                                     {{total_active_txt}}
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="col-sm-3">
-                        <div class="box">
+                        <div style="background: rgb(47, 245, 73);" class="box">
                             <center>
                                 <div class="text">
                                     {{total_recovered_txt}}
@@ -184,8 +184,8 @@
                             </center>
                         </div>
                     </div>
-                    <div class="col-sm-3">
-                        <div class="box">
+                    <div  class="col-sm-3">
+                        <div style="background: rgb(58, 56, 56); color: white;" class="box">
                             <center>
                                 <div class="text">
                                     {{total_deaths_txt}}
@@ -205,7 +205,7 @@
                 <div class="row">
 
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(60, 204, 240);" class="box">
 
                             <center>
                                 <div class="text">
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(240, 86, 201);" class="box">
                             <center>
                                 <div class="text">
                                     {{ total_recvd_sample_txt}}
@@ -232,7 +232,7 @@
                         </div>
                     </div>
                     <div class="col-sm-4">
-                        <div class="box">
+                        <div style="background: rgb(221, 170, 60);" class="box">
                             <center>
                                 <div class="text">
                                     {{total_not_rcvd_samples_txt}}
@@ -310,7 +310,7 @@
          
             <div class="row">
 
-                <div class="col-sm-3 hospitals">
+                <div class="col-sm-4 hospitals">
                     <center>
                         <div class="hospital_text">
 
@@ -324,7 +324,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-sm-3 hospitals">
+                <div class="col-sm-4 hospitals">
                     <center>
                         <div class="hospital_text">
                             L 1 समकक्ष कोविड केयर चिकित्सालय झुनझुन वाला कॉलेज
@@ -337,7 +337,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-sm-3 hospitals">
+                <div class="col-sm-4 hospitals">
                     <center>
                         <div class="hospital_text">
 
@@ -351,7 +351,7 @@
                         </div>
                     </center>
                 </div>
-                <div class="col-sm-3 hospitals">
+                <div class="col-sm-4 hospitals">
                     <center>
                         <div class="hospital_text">
 
