--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
         
                 <div class="header-image">
-                 
+                 <p>कोरोना कण्ट्रोल रूम एवं दूरभाष नंबर : <strong>8929100752</strong></p>
                 </div>
 
 
