--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         
                 <div class="header-image">
                  <p>कोरोना कण्ट्रोल रूम एवं दूरभाष नंबर : <strong>8929100752</strong></p>
+                 <p>एसएसपी अयोध्या व्हाट्सप्प नंबर  : <strong>8004143000</strong></p>
+                 <p>अयोध्या पुलिस  : <strong>9453116001/9415774433/112</strong></p>
                 </div>
 
 
