--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 </div>
         
                 <div class="header-image">
-                 <p>कोरोना कण्ट्रोल रूम एवं दूरभाष नंबर : <strong>8929100752</strong></p>
-                 <p>एसएसपी अयोध्या व्हाट्सप्प नंबर  : <strong>8004143000</strong></p>
-                 <p>अयोध्या पुलिस  : <strong>9453116001/9415774433/112</strong></p>
+                 <p>कोरोना कण्ट्रोल रूम एवं दूरभाष नंबर : <b style="color: blue;">8929100752</b></p>
+                 <p>एसएसपी अयोध्या व्हाट्सप्प नंबर  : <b style="color: blue;">8004143000</b></p>
+                 <p>अयोध्या पुलिस  : <b style="color: blue;">9453116001/9415774433/112</b></p>
                 </div>
 
 
