--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 </div>
         
                 <div class="header-image">
-                 <p>कोरोना कण्ट्रोल रूम एवं दूरभाष नंबर : <b style="color: blue;">8929100752</b></p>
-                 <p>एसएसपी अयोध्या व्हाट्सप्प नंबर  : <b style="color: blue;">8004143000</b></p>
-                 <p>अयोध्या पुलिस  : <b style="color: blue;">9453116001/9415774433/112</b></p>
+                 <p><img src="images/phone.png" alt="" srcset="">कोरोना कण्ट्रोल रूम एवं दूरभाष नंबर : <b style="color: blue;">8929100752</b></p>
+                 <p><img src="images/whatsapp.png" alt="" srcset=""> एसएसपी अयोध्या व्हाट्सप्प नंबर  : <b style="color: blue;">8004143000</b></p>
+                 <p> <img src="images/phone.png" alt="" srcset=""> अयोध्या पुलिस  : <b style="color: blue;">9453116001/9415774433/112</b></p>
                 </div>
 
 
