--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="app">
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">{{ site_title}}</a>
+                <a class="navbar-brand" href="#"> <img src="images/rama.png" alt=""> {{ site_title}}</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
