--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
                 <div class="heading">
-                    {{data}} की रिपोर्ट
+                <img src="images/point.png" alt="">    {{data}} की रिपोर्ट
                 </div>
                 <div class="row">
 
