--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <hr>
                 <center>
                     <div class="heading">
-                        संस्थागत क्वारंटीन चिकित्सालय<img src="images/hospital.png" alt="">
+                        <img src="images/hospital.png" alt="">  संस्थागत क्वारंटीन चिकित्सालय
                     </div>
                 </center>
                 <div class="row">
@@ -315,7 +315,7 @@
                 </div>
                 <center>
                     <div class="heading">
-                        L 1 , L 2 एवं कोविड केयर चिकित्सालय <img src="images/hospital.png" alt="">
+                        <img src="images/hospital.png" alt="">   L 1 , L 2 एवं कोविड केयर चिकित्सालय 
                 </center>
          
             <div class="row">
