--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                 </div>
 
 
+                <center>
+                    <button style="color: blue; font-weight: bolder;" onclick="document.location.href='https://chat.whatsapp.com/EiTqwBt28a04ie10OnSHEL'"  class="btn btn-warning" >क्लिक करे और पाएं व्हाट्सप्प <img src="images/whatsapp2.png" alt=""> अपडेट्स  </button>
+                </center>
                 <div class="heading">
                 <img src="images/point.png" alt="">    {{data}} की रिपोर्ट
                 </div>
