--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <hr>
 
                 <hr>
-                <center>
+                <!-- <center>
                     <div class="heading">
                         <img src="images/hospital.png" alt="">  संस्थागत क्वारंटीन चिकित्सालय
                     </div>
@@ -471,7 +471,7 @@
 
                         </div>
                     </center>
-                </div>
+                </div> -->
             </div>
             <center>
             <button onclick="document.location.href='https://nocovid.netlify.app/'" class="btn btn-primary">पूरे भारत का विस्तृत  डेटा देखें </button>
